--- a/css/home.css
+++ b/css/home.css
@@ -208,6 +208,8 @@
 
 /* ---------footer----------- */
 .footer{
+    padding: 1% 7% 0 7%;
+    padding-top: 70px;
     background-color: #000;
     margin-top: 50px;
     display: grid;
